erDiagram
    "publ.organization_invitations" {
        uuid id PK
        uuid organization_id FK
        text code 
        uuid user_id FK
        citext email 
    }

    "publ.organization_memberships" {
        uuid id PK
        uuid organization_id FK
        uuid user_id FK
        boolean is_owner 
        boolean is_billing_contact 
        timestamp_with_time_zone created_at 
    }

    "publ.organizations" {
        uuid id PK
        citext slug 
        text name 
        timestamp_with_time_zone created_at 
    }

    "publ.user_authentications" {
        uuid id PK
        uuid user_id FK
        text service 
        text identifier 
        jsonb details 
        timestamp_with_time_zone created_at 
        timestamp_with_time_zone updated_at 
    }

    "publ.user_emails" {
        uuid id PK
        uuid user_id FK
        citext email 
        boolean is_verified 
        boolean is_primary 
        timestamp_with_time_zone created_at 
        timestamp_with_time_zone updated_at 
    }

    "publ.users" {
        uuid id PK
        citext username 
        text name 
        text avatar_url 
        boolean is_admin 
        boolean is_verified 
        timestamp_with_time_zone created_at 
        timestamp_with_time_zone updated_at 
    }

    "publ.vehicles" {
        uuid id PK
        text owner_name 
        text type 
        integer price 
        integer year 
        double_precision fuel_consumption 
        timestamp_with_time_zone created_at 
        timestamp_with_time_zone updated_at 
    }

    "publ.organization_invitations" }o--|| "publ.organizations" : "organization_id"
    "publ.organization_invitations" }o--|| "publ.users" : "user_id"
    "publ.organization_memberships" }o--|| "publ.organizations" : "organization_id"
    "publ.organization_memberships" }o--|| "publ.users" : "user_id"
    "publ.user_authentications" }o--|| "publ.users" : "user_id"
    "publ.user_emails" }o--|| "publ.users" : "user_id"
